test/langtools/tools/javac/SuperInit/EarlyAssignmentNoPreview2.out
EarlyAssignmentNoPreview2.java:12:14: compiler.err.feature.not.supported.in.source: (compiler.misc.feature.flexible.constructors), 24, 25
1 error
